Form is pretty much done Trying to fix up how the pages look on tablets. I dislike tablets

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ nav {
     display: block;
     border: 0;
     margin: auto;
+    height: auto;
     cursor: pointer;
 }
 .hamburger:focus {
@@ -131,9 +132,58 @@ main {
 }
 .ulFlex{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     gap: 15px;
 }
 
+.form-container {
+    display: flex;
+    flex-direction: column;
+}
+#main-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#form-main {
+    padding-top: 10px;
+}
+.text-center {
+    text-align: center;
+}
+input[type="text"]{
+    border-radius: 30px;
+    border: none;
+    height: 22px;
+    text-indent: 5px;
+}
+input[type="email"]{
+    border-radius: 30px;
+    border: none;
+    height: 24px;
+    text-indent: 5px;
+}
+input[type="tel"]{
+    border-radius: 30px;
+    border: none;
+    height: 22px;
+    text-indent: 5px;
+}
+textarea {
+    border: none;
+    text-indent: 5px;
+}
+.buttons {
+    margin-top: 1.1rem;
+    display: flex;
+    gap: 20px
+}
+button {
+    height: 25px;
+    width: 100px;
+}
 
 
 /* Footer Styles */
@@ -211,13 +261,24 @@ footer {
         justify-content: space-evenly;
     }
     .standard-image-size {
-        min-width: auto;
+        min-width: 400px;
+        height: auto;
+    }
+    .food-tablet-img {
+        width: 200px;
         height: auto;
     }
     #video {
         width: 500px;
         height: 400px;
     }
+    #form-main {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 25px;
+    }
+
 }
 /* Desktop Viewport */
 @media only screen and (min-width: 830px){
@@ -263,5 +324,7 @@ footer {
     .desktop-text {
         font-size: 1.3125rem;
     }
-    
+    #form-main {
+        padding-top: 10px
+    }
 }
